--- a/card.html
+++ b/card.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <UL>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Login</a></li>
+                <li><a href="">Sing Up</a></li>
+            </UL>
+        </nav>
+    </header>
     <main>
         <section class="card-section">
             <h2>Our Products</h2>
