--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <UL>
+                <li><a href="">Help</a></li>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Login</a></li>
